--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: node_js
 node_js:
-  - '0.10'
-  - '0.11'
+- '0.10'
+- '0.11'
 before_script:
-  - echo -e "Host *\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - npm install -g bower grunt-cli
-  - gem install sass
-  - bower install
+- echo -e "Host *\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- git config --global user.email "$GIT_EMAIL"
+- git config --global user.name "$GIT_NAME"
+- npm install -g bower grunt-cli
+- gem install sass
+- bower install
 services: mongodb
 after_success:
-  - chmod 600 .travis/deploy_key.pem
-  - ssh-add .travis/deploy_key.pem
-  - grunt deploy
+- chmod 600 .travis/deploy_key.pem
+- ssh-add .travis/deploy_key.pem
+- grunt deploy
