--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,11 @@ node_js:
 - '0.11'
 before_script:
 - echo -e "Host *\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-- git config --global user.email "$GIT_EMAIL"
-- git config --global user.name "$GIT_NAME"
+- git config --global user.email "ligeek49@gmail.com"
+- git config --global user.name "Jinyoung Kim (via TravisCI)"
 - npm install -g bower grunt-cli
 - gem install sass
 - bower install
 services: mongodb
 after_success:
-- chmod 600 .travis/deploy_key.pem
-- ssh-add .travis/deploy_key.pem
 - grunt deploy
