--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ after_success:
 - ssh-add .travis/deploy_key.pem
 - grunt deploy
 before_install:
+- mkdir -p .travis
 - openssl aes-256-cbc -K $encrypted_c9d3d02509c8_key -iv $encrypted_c9d3d02509c8_iv
   -in id_rsa.enc -out .travis/deploy_key.pem -d
