--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
 - bower install
 services: mongodb
 after_success:
+- chmod 600 .travis/deploy_key.pem
 - ssh-add .travis/deploy_key.pem
 - grunt deploy
 before_install:
